# PRIM

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  _fj32_c.c  config.json  copyit.txt  coverage.xml  migrate_structure.py  migration-guide.md  modul3_hybrid.ipynb  modul3_hybrid.py  modul3_hybrid_results.csv  modul4_benchmarks.ipynb  modul4_benchmarks.py  modul5_prime_gap.py  modul6_baillie_psw.ipynb  modul6_baillie_psw.py  project-restructure.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/source/: conf.py
examples/: 02_wheel_sieve.ipynb
modul2_wheel_sieve/: modul2_simple_sieve_numba.py  modul2_wheel_sieve_numba.py
modul5_data/: gaps.csv  primes.csv
modul6_data/: baillie_psw_results.csv
native/primetest/: primetest.cpp
native/wheel_sieve/: setup.py  wheel_sieve.pyx
prim/: modul1_forisek_jancina.ipynb  modul2_simple_sieve_numba.py  modul3_hybrid.py  modul4_benchmarks.py  modul5_prime_gap.ipynb  modul5_prime_gap.py  modul6_baillie_psw.py
prim/tests/: test_basic.py  test_modul6_validation.py
primtests.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: prepare_dev.ps1
src/prim/: _version.py
src/prim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/prim/analysis/: __init__.py  benchmarks.py  prime_gap.py
src/prim/cli/: __init__.py
src/prim/core/: __init__.py  baillie_psw.py  forisek_jancina.py
tests/: test_basic.py  test_sample.py
tests/core/: test_forisek_jancina.py
